# TenthTutor

./: .gitignore
backend/: api.py  pyproject.toml
backend/agents/: ap-agent.py  learner-rag-agent.py  learner_rag_agent.py  mentor-agent.py  qp-agent.py  sql-agent.py  video-creator-agent.py
backend/db/: models.py
backend/db/chroma/: chroma.sqlite3
backend/utils/: llm.py  retriever.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/upload/: page.tsx
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250512041005_init/: migration.sql
frontend/prisma/migrations/20250516124148_added/: migration.sql
