[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vasabi07 <vasanthanarulselvan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
python-multipart = "^0.0.20"
pymupdf = "^1.25.5"
langchain = "^0.3.25"
langchain-community = "^0.3.23"
langchain-chroma = "^0.2.3"
langchain-openai = "^0.3.16"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
